--- a/index.html
+++ b/index.html
@@ -1,9 +1,111 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Viopop</title>
-    <style type="text/css" media="screen">
-      html { width: 100%; height: 100%; background: #fff url("images/logo.png") center center no-repeat; }
-    </style>
-  </head>
-</html>
+---
+layout: default
+---
+
+<div id="hero">
+  <div class="container">
+    <div class="row">
+      <div class="hero-inner">
+        <div class="col-md-4 text-right">
+          <span class="logo-icon"></span>
+        </div>
+        <div class="col-md-8">
+          <h1>We're Viopop</h1>
+          <h3>We build amazing software in Costa Mesa, California</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ha-block ha-about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1>Team</h1>
+        <h4>Allow us to introduce ourselves</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="ha-inner-block text-center col-md-4">
+        <div>
+          <h3>Brandon Arbini</h3>
+          <h5>Software Architect / Entrepreneur / YC Alum</h5>
+          <h5><a href="http://twitter.com/brandonarbini">@brandonarbini</a></h5>
+        </div>
+      </div>
+      <div class="ha-inner-block text-center col-md-4">
+        <div>
+          <h3>Jory Hatton</h3>
+          <h5>Software Engineer / UI Designer / Percussionist</h5>
+          <h5><a href="http://twitter.com/joryhatton">@joryhatton</a></h5>
+        </div>
+      </div>
+      <div class="ha-inner-block text-center col-md-4">
+        <div>
+          <h3>Jay Sherer</h3>
+          <h5>Marketing Director / Copywriter / Body Boarder</h5>
+          <h5><a href="http://twitter.com/jaysherer">@jaysherer</a></h5>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-12">
+        <a href="#contact" class="btn btn-lg btn-success">Get to know us</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ha-block ha-projects">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1>Projects</h1>
+        <h4>Some cool stuff we've been working on lately</h4>
+      </div>
+    </div>
+    <div class="row">
+      {% for post in site.posts %}
+        <div class="ha-inner-block text-center col-md-4">
+          <a href="{{ post.url }}">
+            <h3>{{ post.title }}</h3>
+            <h5>{{ post.short_description }}</h5>
+          </a>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
+<div class="ha-block ha-contact" id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1>Get in Touch</h1>
+        <h4>Have a project in mind? Drop us a line and we will be in touch</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <form>
+          <div class="form-group">
+            <label>Full Name</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control">
+          </div>
+          <div class="form-group">
+            <label>Full Name</label>
+            <textarea class="form-control" rows="8"></textarea>
+          </div>
+          <div class="form-group text-right">
+            <input type="submit" class="btn btn-success" value="Send Message">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
