--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <title>Viopop</title>
     <style type="text/css" media="screen">
-      html { width: 100%; height: 100%; background: #fff url("images/logo.png") center center no-repeat; }
+      html {
+        min-width: 100vw;
+        min-height: 100vh;
+        background: #fff url("images/logo.png") center center no-repeat;
+      }
     </style>
   </head>
 </html>
